Dec 16, 2004

  * FIXED: Socket and ssl interaction problems (Windows).  Matt Lilley.

October 04, 2004

  * FIXED: library(socket) and library(ssl): potential crash and starvation
    issue.  Appears to happen only on Windows NT, but the problem can -at
    least in theory- also appear in other Windows versions.  With thanks
    to Mike Elston for providing the test program.

Sep 21, 2004

  * FIXED: cgi_get_form/1 for www-form-encoded strings with lowercase
    %xx.  John Paolillo.

Jul 18, 2004

  * CLEANUP: ensure mimimal library dependency.  After discussion on
    mailinglist.

Jul 5, 2004

  * CLEANUP: split socket library in two to be able to reuse the
    non-blocking socket stuff in the SSL library.

May 5, 2004

  * FIXED: memory leak in open_memory_file/3.  Fabien Todescato.

Oct 2, 2003

  * PORT: Configure socket library for IRIX 6.5 (Rob Myers).

Aug 28, 2003

  * FIXED: Complete rewrite of library(socket) for MS-Windows.

Jun 2, 2003

  * FIXED: time:remove_alarm/1 for MS-WIndows.  Mike Elston.

Mar 14, 2003

  * ADDED: Code to make sockets cooperate with signals, so
    call_with_time_limit/2 works on blocking socket operations.

  * FIXED: Error handling on sockets (Windows)

  * FIXED: call_with_time_limit/2 module problem

Feb 2, 2003

  * FIXED: call_with_time_limit/2 if the argument goal fails.  Wouter
    Jansweijer.

Dec 18, 2002

  * FIXED: make all socket calls resume on EINTR (Unix systems).

Dec 7, 2002

  * FIXED: hand open sockets to other threads (blocking problems in Windows).

Dec 6, 2002

  * FIXED: blocking write in sockets and make tcp_close_socket close the
    associated streams (if any).

Dec 4, 2002

  * FIXED: tcp_close_socket/1 to work on the listened socket. Peter Marks.

Dec 2, 2002

 * ADDED: tcp_bind(+Socket, -Port) to bind with an arbitrary free port.

Nov 29, 2002

 * FIXED: MS-Windows tcp_read() not to wait for messages after we have
   seen FD_CLOSE. Holger Kanwischer.
